infrastructure/dex/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  parentRefs:
    - name: wac-hospital-gateway
      sectionName: fqdn
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dex

      backendRefs:
        - group: ""
          kind: Service
          name: dex
          port: 5556
